# service/src/main/java/br/com/sw2u/realmeet/config/ControllerExceptionHandler.java
@@ -1,10 +1,16 @@
 package br.com.sw2u.realmeet.config;
 
 import br.com.sw2u.realmeet.api.model.ResponseError;
+import br.com.sw2u.realmeet.exception.InvalidRequestException;
 import br.com.sw2u.realmeet.exception.RoomNotFoundException;
+import br.com.sw2u.realmeet.util.ResponseEntityUtils;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
@@ -12,13 +18,17 @@ public class ControllerExceptionHandler {
 
     @ExceptionHandler(RoomNotFoundException.class)
     public ResponseEntity<Object> handleNotFoundException(Exception e) {
-        return buildResponseEntity(HttpStatus.NOT_FOUND, e);
+        return ResponseEntityUtils.notFound();
     }
 
-    private ResponseEntity<Object> buildResponseEntity(HttpStatus status, Exception e) {
-        return new ResponseEntity<>(
-            new ResponseError().code(status.value()).status(status.getReasonPhrase()).message(e.getMessage()),
-            status
-        );
+    @ExceptionHandler(InvalidRequestException.class)
+    @ResponseBody
+    @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+    public List<ResponseError> handleInvalidRequestException(InvalidRequestException e) {
+        return e
+            .getValidationErrors()
+            .stream()
+            .map(exception -> new ResponseError().errorCode(exception.getErrorCode()).field(exception.getField()))
+            .collect(Collectors.toList());
     }
 }
